syntax = "proto3";

option csharp_namespace = "TradeBot.TradeMarket.TradeMarketService.v1";
import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

import "tradebot/common/v1/common.proto";
package tradebot.trademarket.trademarket_service.v1;

service TradeMarketService {

	/*
		Покупает ордер по указанному ид и возвращает результат покупики (получилось / не получилось)
	*/
	rpc PlaceOrder (PlaceOrderRequest) returns (PlaceOrderResponse);

	/*
		Подписывается на ордера выбранного типа
	*/
	rpc SubscribeOrders(SubscribeOrdersRequest) returns (stream SubscribeOrdersResponse);

	/*
		подписка на изменения размещенных ордеров
	*/
	rpc SubscribeMyOrders(SubscribeMyOrdersRequest) returns (stream SubscribeMyOrdersResponse);

	/*
		Подписка на изменение баланса пользователя (ЕДИНСТВЕННОГО)
	*/
	rpc SubscribeBalance(SubscribeBalanceRequest) returns (stream SubscribeBalanceResponse);

	/*
		Аутентификция на бирже по токену
	*/
	rpc AuthenticateToken(AuthenticateTokenRequest) returns (AuthenticateTokenResponse);

	/*
		Список доступных слотов на бирже
	*/
	rpc Slots(SlotsRequest) returns (stream SlotsResponse);

	/*
		Подписка на логи нужного сервиса
	*/
	rpc SubscribeLogs(SubscribeLogsRequest) returns (stream SubscribeLogsResponse);


	/*
		Обновление параметров ордера по ид
	*/
	rpc AmmendOrder(AmmendOrderRequest) returns (AmmendOrderResponse);

	/*
		удаление ордера по ид
	*/
	rpc DeleteOrder(DeleteOrderRequest) returns (DeleteOrderResponse);

	/*
		Подписка на изменения полного баланса пользователя
	*/
	rpc SubscribeMargin(SubscribeMarginRequest) returns (stream SubscribeMarginResponse);

}

message SubscribeMarginRequest{
	// В мете передается информация о пользователе
}

enum ChangesType{
	CHANGES_TYPE_UNDEFIEND = 0; 
	CHANGES_TYPE_PARTITIAL = 1;
	CHANGES_TYPE_UPDATE = 2; 
	CHANGES_TYPE_INSERT = 3;
	CHANGES_TYPE_DELETE = 4; 
}

message Margin{
	 int32 Account = 1;
         string currency = 2;
         int32 risk_limit = 3;
         string PrevState = 4;
         string State = 5;
         string Action = 6;
         int32 Amount = 7;
         int32 PendingCredit = 8;
         int32 PendingDebit = 9;
         int32 ConfirmedDebit = 10;
         int32 PrevRealisedPnl = 11;
         int32 PrevUnrealisedPnl = 12;
         int32 GrossComm = 13;
         int32 GrossOpenCost = 14;
         int32 GrossOpenPremium = 15;
         int32 GrossExecCost = 16;
         int32 GrossMarkValue = 17;
         int32 RiskValue = 18;
         int32 TaxableMargin = 19;
         int32 InitMargin = 20;
         int32 MaintMargin = 21;
         int32 SessionMargin = 22;
         int32 TargetExcessMargin = 23;
         int32 VarMargin = 24;
         int32 RealisedPnl = 25;
         int32 UnrealisedPnl = 26;
         int32 IndicativeTax = 27;
         int32 UnrealisedProfit = 28;
         int32 SyntheticMargin = 29;
         int32 WalletBalance = 30;
         int32 MarginBalance = 31;
         int32 MarginBalancePcnt = 32;
         int32 MarginLeverage = 33;
         int32 MarginUsedPcnt = 34;
         int32 ExcessMargin = 35;
         int32 ExcessMarginPcnt = 36;
         int32 AvailableMargin = 37;
         int32 WithdrawableMargin = 38;
         google.protobuf.Timestamp Timestamp = 39;
         int32 GrossLastValue = 40;
         double Commission = 41;
}

message SubscribeMarginResponse{
	ChangesType changed_type = 1;

}


message DeleteOrderRequest{
	string order_id = 1;
}

message DeleteOrderResponse{
	tradebot.common.v1.DefaultResponse response = 1;
}


enum QuantityType{
	QUANTITY_TYPE_UNSPECIFIED = 0;
	QUANTITY_TYPE_LEAVES = 1;	
	QUANTITY_TYPE_DEFAULT = 2;
	QUANTITY_TYPE_NONE = 3;	
}

enum PriceType{
	PRICE_TYPE_UNSPECIFIED = 0;
	PRICE_TYPE_DEFAULT = 1;
	PRICE_TYPE_NONE = 2;
}

message AmmendOrderRequest{
	string id = 1;
	double new_price = 2;
	int32 new_quantity = 3;
	QuantityType quantity_type = 4;
	PriceType price_type = 5;
}

message AmmendOrderResponse{
	tradebot.common.v1.DefaultResponse response = 1;
}

message SubscribeMyOrdersRequest{
	google.protobuf.Empty empty = 1;
}

message SubscribeMyOrdersResponse {
	tradebot.common.v1.Order changed = 2;

}

message SubscribeOrdersRequest{
	tradebot.common.v1.SubscribeOrdersRequest request = 1;
	
}

message SubscribeOrdersResponse{
	tradebot.common.v1.SubscribeOrdersResponse response = 1;

}

message SubscribeLogsRequest{
	tradebot.common.v1.SubscribeLogsRequest request = 1;
}

message SubscribeLogsResponse{
	tradebot.common.v1.SubscribeLogsResponse response = 1;
}

message SubscribeBalanceRequest{
	tradebot.common.v1.SubscribeBalanceRequest request = 1;
	string slot_name = 2;
}

message SubscribeBalanceResponse{
	tradebot.common.v1.SubscribeBalanceResponse response = 1;
}

message PlaceOrderRequest{
	double price = 1;
	double value = 2;
}

message PlaceOrderResponse{
	tradebot.common.v1.DefaultResponse response = 1;
	string order_id = 2;
}

message SlotsRequest{
	//TODO Тут должно быть обращение к конкретной бирже, но она пока одна
	google.protobuf.Empty empty = 1;
}
message SlotsResponse{
	string slot_name = 1;
}

message AuthenticateTokenRequest{
	string token = 1;
}

message AuthenticateTokenResponse{
	tradebot.common.v1.DefaultResponse response = 1;
}

